# CodingDojo

Function_Programming/Actor/: CMakeLists.txt  bookmark.h  expected.h  filter.h  join.h  main.cc  mtry.h  service.cc  service.h  sink.h  transform.h  trim.h  values.h
Function_Programming/Actor/tests/: ActorTest.cc  CMakeLists.txt
Function_Programming/Curried_Function/: curried.cc
Function_Programming/Unit_Subsystem/: Unit_Subsystem.cc
Katas/: CMakeLists.txt
Katas/BloomFilter/: BloomFilter.h  CMakeLists.txt  README.md  WordSpellChecker.cc
Katas/BloomFilter/test/: BloomFilterTest.cc  CMakeLists.txt
Katas/Bowling/: CMakeLists.txt  README.md  bowling.h  test.cc
Katas/Bowling/test/: BowlingTest.cc  CMakeLists.txt
Katas/LeapYear/: CMakeLists.txt  README.md  leapyear.h
Katas/LeapYear/test/: CMakeLists.txt  LeapYearTest.cc
Katas/Tennis/: CMakeLists.txt  README.md  tennis.cc  tennis.h
Katas/Tennis/Tennis_without_March7/: CMakeLists.txt  tennis.h
Katas/Tennis/Tennis_without_March7/test/: CMakeLists.txt  TennisTest.cc
Modern_CPP_Design/Typelist/: AbstractFactory.h  AbstractFactory_test.cc  AssocVector.h  Functor-test.cc  Functor.h  MultiMethods-test.cc  MultiMethods.h  TypeInfo.h  typelist.cc  typelist.h
